src/index.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
@import "@fontsource-variable/inter";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --font-heading: var(--font-sans);
    --font-sans: 'Inter Variable', sans-serif;
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --color-foreground: var(--foreground);
    --color-background: var(--background);
    --radius-sm: calc(var(--radius) * 0.6);
    --radius-md: calc(var(--radius) * 0.8);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) * 1.4);
    --radius-2xl: calc(var(--radius) * 1.8);
    --radius-3xl: calc(var(--radius) * 2.2);
    --radius-4xl: calc(var(--radius) * 2.6);
}

:root {
    --background: oklch(1 0 0);
    --foreground: oklch(0.145 0.008 326);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.145 0.008 326);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.145 0.008 326);
    --primary: oklch(0.5 0.134 242.749);
    --primary-foreground: oklch(0.977 0.013 236.62);
    --secondary: oklch(0.967 0.001 286.375);
    --secondary-foreground: oklch(0.21 0.006 285.885);
    --muted: oklch(0.96 0.003 325.6);
    --muted-foreground: oklch(0.542 0.034 322.5);
    --accent: oklch(0.96 0.003 325.6);
    --accent-foreground: oklch(0.212 0.019 322.12);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.922 0.005 325.62);
    --input: oklch(0.922 0.005 325.62);
    --ring: oklch(0.711 0.019 323.02);
    --chart-1: oklch(0.865 0.012 325.68);
    --chart-2: oklch(0.542 0.034 322.5);
    --chart-3: oklch(0.435 0.029 321.78);
    --chart-4: oklch(0.364 0.029 323.89);
    --chart-5: oklch(0.263 0.024 320.12);
    --radius: 0.625rem;
    --sidebar: oklch(0.985 0 0);
    --sidebar-foreground: oklch(0.145 0.008 326);
    --sidebar-primary: oklch(0.588 0.158 241.966);
    --sidebar-primary-foreground: oklch(0.977 0.013 236.62);
    --sidebar-accent: oklch(0.96 0.003 325.6);
    --sidebar-accent-foreground: oklch(0.212 0.019 322.12);
    --sidebar-border: oklch(0.922 0.005 325.62);
    --sidebar-ring: oklch(0.711 0.019 323.02);
}

.dark {
    --background: oklch(0.145 0.008 326);
    --foreground: oklch(0.985 0 0);
    --card: oklch(0.212 0.019 322.12);
    --card-foreground: oklch(0.985 0 0);
    --popover: oklch(0.212 0.019 322.12);
    --popover-foreground: oklch(0.985 0 0);
    --primary: oklch(0.443 0.11 240.79);
    --primary-foreground: oklch(0.977 0.013 236.62);
    --secondary: oklch(0.274 0.006 286.033);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.263 0.024 320.12);
    --muted-foreground: oklch(0.711 0.019 323.02);
    --accent: oklch(0.263 0.024 320.12);
    --accent-foreground: oklch(0.985 0 0);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.542 0.034 322.5);
    --chart-1: oklch(0.865 0.012 325.68);
    --chart-2: oklch(0.542 0.034 322.5);
    --chart-3: oklch(0.435 0.029 321.78);
    --chart-4: oklch(0.364 0.029 323.89);
    --chart-5: oklch(0.263 0.024 320.12);
    --sidebar: oklch(0.212 0.019 322.12);
    --sidebar-foreground: oklch(0.985 0 0);
    --sidebar-primary: oklch(0.685 0.169 237.323);
    --sidebar-primary-foreground: oklch(0.293 0.066 243.157);
    --sidebar-accent: oklch(0.263 0.024 320.12);
    --sidebar-accent-foreground: oklch(0.985 0 0);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.542 0.034 322.5);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
    }
  body {
    @apply bg-background text-foreground;
    }
  button:not(:disabled), [role="button"]:not(:disabled) {
    cursor: pointer;
    }
  html {
    @apply font-sans;
    scrollbar-gutter: stable;
    }
}

